# transcribemcp

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  meeting-assistant-plan.md  pyproject.toml  restructure-plan.md
scripts/: fetch_sample_audio.sh
src/meetingtool/: __main__.py  audio.py  config.py  db.py  diarize.py  documents.py  jobs.py  scribe_tools.py  server.py  transcribe.py  vad.py
src/meetingtool/backends/: base.py  stub.py  whisperx_backend.py
src/meetingtool/tools/: __init__.py  chat.py  documents.py  jobs.py  meetings.py  persons.py  projects.py  search.py  series.py  speakers.py  summaries.py
src/transcribemcp/: __main__.py  config.py  pipeline.py  server.py
src/transcribemcp/backends/: cohere_backend.py  qwen3_backend.py
testing/: .mcp.json
tests/: conftest.py  test_audio.py  test_chat_context.py  test_cohere_backend.py  test_crud.py  test_db.py  test_diarize_merge.py  test_documents.py  test_e2e.py  test_jobs.py  test_persons.py  test_qwen3_vllm.py  test_search.py  test_series.py  test_speakers.py  test_summaries.py  test_thin_surface.py  test_tools_crud.py  test_transcript_filters.py  test_vad.py  test_windowed_transcribe.py  test_workflow.py
