[project]
name = "meetingtool"
version = "0.1.0"
description = "MCP server exposing local audio transcription + diarization to an LLM agent"
readme = "README.md"
authors = [
    { name = "charliecpeterson", email = "charliecpeterson@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",  # qwen3 vLLM backend
]

[project.optional-dependencies]
whisperx = [
    "faster-whisper>=1.0.0",
    "whisperx>=3.1.0",
]
qwen3 = [
    "transformers>=4.45.0",
    "torch>=2.3.0",
    "soundfile>=0.12.0",
]
qwen3-mlx = [
    "mlx>=0.18.0; sys_platform == 'darwin'",
]
cohere = [
    # Cohere Transcribe is LLM-decoded: no native timestamps, so the [vad]
    # extra's silero-vad is required. transformers runs on CUDA / CPU.
    "transformers>=4.45.0",
    "torch>=2.3.0",
    "silero-vad>=5.1",
    "imageio-ffmpeg>=0.5.1",
]
cohere-mlx = [
    # Apple Silicon acceleration for Cohere Transcribe via mlx-audio.
    "mlx-audio>=0.2.0; sys_platform == 'darwin'",
]
diarize = [
    "pyannote.audio>=4.0.0",
    # pyannote 4.x delegates audio decoding to torchcodec, which needs FFmpeg
    # dylibs we don't ship. Fall back to decoding via the bundled ffmpeg binary
    # and pass pyannote a preloaded tensor dict.
    "imageio-ffmpeg>=0.5.1",
]
vad = [
    # silero-vad pulls torch transitively; imageio-ffmpeg is needed for decode
    # in vad.py (same shared audio.decode_pcm used by diarize).
    "silero-vad>=5.1",
    "imageio-ffmpeg>=0.5.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    # Bundles an ffmpeg binary into the venv so scripts/fetch_sample_audio.sh
    # and faster-whisper audio decoding work without requiring `brew install ffmpeg`.
    "imageio-ffmpeg>=0.5.1",
]

[project.scripts]
meetingtool = "meetingtool.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
